Bug: 651192 Reviewer: Nathan Comment: There is no way to close the avatar image when it is too large

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtProfile.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtProfile.css
@@ -449,5 +449,5 @@ padding-right: 15px;
 	padding: 5px;
 }
 .modifyAvatarDlgActions{
-	margin: 20px;
+	margin: 10px;
 }
